--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
   - git clone https://github.com/audiofilter/spuc.git
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake ../extensions
 script: make
