Use local directory for python extensions install

--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -176,8 +176,8 @@ FOREACH(mod ${EXTS})
   ADD_LIBRARY(${mod} SHARED ${SRC})
   TARGET_LINK_LIBRARIES(${mod} spuc spuc_filt spuc_types ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )
   SET_TARGET_PROPERTIES(${mod} PROPERTIES PREFIX "")
-  #SET(LIBRARY_OUTPUT_PATH "../../spuc_linux_build")
-  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
+  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
+#  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
 ENDFOREACH(mod ${EXTS})
 FOREACH(mod ${B_EXTS})
   FILE(APPEND test_imports "import pyspuc.${mod}\n")
@@ -185,7 +185,8 @@ FOREACH(mod ${B_EXTS})
   ADD_LIBRARY(${mod} SHARED ${SRC})
   TARGET_LINK_LIBRARIES(${mod} spuc spuc_filt spuc_types ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )
   SET_TARGET_PROPERTIES(${mod} PROPERTIES PREFIX "")
-  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
+  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
+#  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
 ENDFOREACH(mod ${EXTS})
 
 ELSEIF(NOT Boost_FOUND)
@@ -195,7 +196,8 @@ ENDIF()
 
 #ADD_CUSTOM_TARGET(CP_INIT)
 ADD_CUSTOM_COMMAND(TARGET filtdes POST_BUILD
-COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ${PYTHON_SITE_PACKAGES}/pyspuc)
+COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ../pyspuc)
+#COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ${PYTHON_SITE_PACKAGES}/pyspuc)
 
 
 ADD_DEFINITIONS("-Wall -fPIC -DSPUCBOOST")
