--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ install:
   - sudo apt-get install cmake libboost-dev
 before_script:
   - git clone https://github.com/audiofilter/spuc.git
+  - cd spuc
+  - mkdir build
+  - cmake ..
+  - make
+  - cd ..
   - mkdir build
   - cd build
   - cmake ../extensions
