--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ before_script:
   - git clone https://github.com/audiofilter/spuc.git
   - cd spuc
   - mkdir build
+  - cd build
   - cmake ..
   - make
-  - cd ..
+  - cd ../..
   - mkdir build
   - cd build
   - cmake ../extensions
