Rename python test, make work on Mac

--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -155,7 +155,7 @@ IF(Boost_FOUND)
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    # Mac OS X specific code
    SET(OperatingSystem "Mac OS X")
-   SET(Boost_USE_STATIC_LIBS ON)
+   SET(Boost_USE_STATIC_LIBS OFF)
    SET(Boost_USE_MULTITHREADED ON)
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 SET(Boost_USE_STATIC_RUNTIME OFF)
@@ -165,7 +165,7 @@ FIND_PACKAGE(PythonLibs REQUIRED)
 INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}" ${PYTHON_INCLUDE_DIRS} "/usr/include" "../spuclib")
 LINK_DIRECTORIES(${PYTHON_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS} ${CMAKE_CURRENT_LIST_DIR}/../spuclib/build)
  
-EXECUTE_PROCESS( COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
+EXECUTE_PROCESS( COMMAND python2.7 -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
  
   
 FILE(WRITE test_imports "# for testing if imports are ok\n") 
@@ -173,11 +173,12 @@ FILE(WRITE test_imports "# for testing if imports are ok\n")
 FOREACH(mod ${EXTS})
   FILE(APPEND test_imports "import pyspuc.${mod}\n")
   SET(SRC ../pyste/${mod}.cpp)
-  ADD_LIBRARY(${mod} SHARED ${SRC})
+  PYTHON_ADD_MODULE(${mod} SHARED ${SRC})
   TARGET_LINK_LIBRARIES(${mod} spuc spuc_filt spuc_types ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )
   SET_TARGET_PROPERTIES(${mod} PROPERTIES PREFIX "")
-  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
-#  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
+  SET_TARGET_PROPERTIES(${mod} PROPERTIES SUFFIX ".so")
+#  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
+  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
 ENDFOREACH(mod ${EXTS})
 FOREACH(mod ${B_EXTS})
   FILE(APPEND test_imports "import pyspuc.${mod}\n")
@@ -185,8 +186,9 @@ FOREACH(mod ${B_EXTS})
   ADD_LIBRARY(${mod} SHARED ${SRC})
   TARGET_LINK_LIBRARIES(${mod} spuc spuc_filt spuc_types ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )
   SET_TARGET_PROPERTIES(${mod} PROPERTIES PREFIX "")
-  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
-#  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
+  SET_TARGET_PROPERTIES(${mod} PROPERTIES SUFFIX ".so")
+#  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
+  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
 ENDFOREACH(mod ${EXTS})
 
 ELSEIF(NOT Boost_FOUND)
@@ -196,8 +198,8 @@ ENDIF()
 
 #ADD_CUSTOM_TARGET(CP_INIT)
 ADD_CUSTOM_COMMAND(TARGET filtdes POST_BUILD
-COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ../pyspuc)
-#COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ${PYTHON_SITE_PACKAGES}/pyspuc)
+COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ${PYTHON_SITE_PACKAGES}/pyspuc)
+#COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ../pyspuc)
 
 
 ADD_DEFINITIONS("-Wall -fPIC -DSPUCBOOST")
