--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -197,8 +197,8 @@ ENDIF()
 
 
 #ADD_CUSTOM_TARGET(CP_INIT)
-ADD_CUSTOM_COMMAND(TARGET filtdes POST_BUILD
-COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ../pyspuc)
+ADD_CUSTOM_COMMAND(TARGET spuc_filtdes POST_BUILD
+COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ${CMAKE_CURRENT_LIST_DIR}/../pyspuc)
 #COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_LIST_DIR}/__init__.py  ${PYTHON_SITE_PACKAGES}/pyspuc)
 
 
