install pyspuc locally due to permission issue on generic Mac

--- a/extensions/CMakeLists.txt
+++ b/extensions/CMakeLists.txt
@@ -177,8 +177,8 @@ FOREACH(mod ${EXTS})
   TARGET_LINK_LIBRARIES(${mod} spuc spuc_filt spuc_types ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )
   SET_TARGET_PROPERTIES(${mod} PROPERTIES PREFIX "")
   SET_TARGET_PROPERTIES(${mod} PROPERTIES SUFFIX ".so")
-#  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
-  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
+  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
+#  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
 ENDFOREACH(mod ${EXTS})
 FOREACH(mod ${B_EXTS})
   FILE(APPEND test_imports "import pyspuc.${mod}\n")
@@ -187,8 +187,8 @@ FOREACH(mod ${B_EXTS})
   TARGET_LINK_LIBRARIES(${mod} spuc spuc_filt spuc_types ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )
   SET_TARGET_PROPERTIES(${mod} PROPERTIES PREFIX "")
   SET_TARGET_PROPERTIES(${mod} PROPERTIES SUFFIX ".so")
-#  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
-  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
+  SET(LIBRARY_OUTPUT_PATH "../pyspuc")
+#  SET(LIBRARY_OUTPUT_PATH ${PYTHON_SITE_PACKAGES}/pyspuc)
 ENDFOREACH(mod ${EXTS})
 
 ELSEIF(NOT Boost_FOUND)
